% Check from R:
%  news(db = tools:::.build_news_db_from_package_NEWS_Rd("~/R/Pkgs/copula/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R Package \pkg{copula}}% MM: look into ../svn-log-from.all

\section{Changes in version 1.0-2 (2021-09-01, svn r1866)}{
  \subsection{New Features}{
    \itemize{
      \item \code{fitCopula(<mixCopula>)} now by default uses
      \code{estimate.variance = TRUE} also with \emph{free} mixture
      weights.

      \item \code{fitLambda()} gets new method \code{"Schmidt.Stadtmueller"}.

      \item \code{fitMvdc()} works in more cases, e.g. with a mixCopula.

      \item \code{"mvdc"} class objects no longer inherit from \code{"xcopula"} (a
      copula) but from new \code{"Xcopula"} (which just \emph{contains} a copula).

      \item using \code{isTRUE()} and \code{isFALSE()} instead of
      \code{identical(TRUE, .)} etc.

      \item \code{fitCopula(.., method="mpl")} now also catches errors in
      var-cov matrix computations.

      \item New \code{loglikCopulaMany(pList, ..)} function for (more
      efficiently) computing copula likelihoods for many parameter vectors / values.
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item New arguments and defaults \code{keepAttr=FALSE} and \code{checkCorr=FALSE}
      for \CRANpkg{mvtnorm}'s \code{Miwa()} should speed up
      \code{pCopula()} for normal- and t- copulas.
    }
  }
}

\section{Changes in version 1.0-1 (2020-12-07, svn r1850)}{
  \subsection{New Features}{
    \itemize{
      \item The \code{pCopula()} methods for normal- and t-copulas now
      allow to pass \code{algorithm = .} to pkg \CRANpkg{mvtnorm}'s
      functions.  For lower dimensions, notably dimension
      \eqn{d \le 3}{d <= 3}, the default is now to typically use a
      \emph{non}-random algorithm.

      Such a default algorithm is also used in the (internal) derivative
      for normal- and t-copulas, (\code{dCdu()} calling \code{dCduEllipCopula()}).
