@@ -1,7 +1,7 @@
 Package: copula
-Version: 1.0-2
+Version: 1.1-0
 VersionNote: Last CRAN: 1.0-1 on 2020-12-07
-Date: 2021-09-01
+Date: 2021-09-30
 Title: Multivariate Dependence with Copulas
 Authors@R: c(person("Marius", "Hofert", role = "aut", email = "marius.hofert@uwaterloo.ca",       comment = c(ORCID = "0000-0001-8009-4665"))
 	   , person("Ivan", "Kojadinovic", role = "aut", email = "ivan.kojadinovic@univ-pau.fr",  comment = c(ORCID = "0000-0002-2903-1543"))
