@@ -3,11 +3,12 @@
 \alias{ellipCopula}
 \alias{normalCopula}
 \alias{tCopula}
+\alias{dispstrToep}
 \alias{pCopula,matrix,normalCopula-method}
 \alias{pCopula,matrix,tCopula-method}
 \description{
-  Constructs an elliptical copula class object with its corresponding
-  parameters and dimension.
+  Creating elliptical copula objects with corresponding dimension and
+  parameters, including the dispersion structure \eqn{\Rho} (pronounced \dQuote{Rho}).
 }
 \usage{
 ellipCopula (family, param, dim = 2, dispstr = "ex", df = 4, ...)
@@ -17,25 +18,30 @@ normalCopula(param, dim = 2, dispstr = "ex")
      tCopula(param, dim = 2, dispstr = "ex", df = 4,
              df.fixed = FALSE, df.min = 0.01)
 
+dispstrToep(perm = NULL, check = TRUE)
+
 \S4method{pCopula}{matrix,normalCopula}(u, copula, algorithm=NULL, keepAttr=FALSE, ...)
 % --> pnormalCopula() in ../R/normalCopula.R
 \S4method{pCopula}{matrix,tCopula}(u, copula, algorithm=NULL, keepAttr=FALSE, ...)
 % --> ptCopula() in ../R/tCopula.R
 }
 \arguments{
-  \item{family}{a character string specifying the family of an
+  \item{family}{a \code{\link{character}} string specifying the family of an
     elliptical copula.  Must be \code{"normal"} (the default) or \code{"t"}.}
   \item{param}{a \code{\link{numeric}} vector specifying the parameter values;
     \code{P2p()} accesses this vector, whereas
     \code{\link{p2P}()} and \code{\link{getSigma}()} provide
     the corresponding \dQuote{P} matrix, see below.}
   \item{dim}{ the dimension of the copula. }
-  \item{dispstr}{a character string specifying the type of the symmetric
-    positive definite matrix characterizing the elliptical
-    copula.  Currently available structures are \code{"ex"} for
+  \item{dispstr}{a string specifying the \dQuote{dispersion structure},
+    i.e., type of the symmetric positive definite matrix characterizing the
+    elliptical copula.  Currently available structures are \code{"ex"} for
     \bold{ex}changeable, \code{"ar1"} for \eqn{AR(1)}, \code{"toep"} for
     Toeplitz (\code{\link{toeplitz}}), and \code{"un"} for
-    \bold{un}structured.}
+    \bold{un}structured.
+
+    The dispersion structure for Toeplitz can (and often should) now be
+    specified by \code{dispstrToep()}, see there.}
   \item{df}{integer value specifying the number of degrees of freedom
     of the multivariate t distribution used to construct the t copulas.}
   \item{df.fixed}{logical specifying if the degrees of freedom \code{df} will be
@@ -82,10 +88,32 @@ normalCopula(param, dim = 2, dispstr = "ex")
     \code{\link[mvtnorm]{pmvnorm}} or \code{\link[mvtnorm]{pmvt}}, respectively.}
   \item{\dots}{for the \code{pCopula()} methods, optional arguments to the
     corresponding algorithm.}
+  %% dispstrToep():
+  \item{perm}{an \code{\link{integer}} vector of length \eqn{d =}\code{dim},
+    which must be a permutation of \code{1:d} specifying the (column)
+    ordering of the variables which has Toeplitz dispersion.}
+  \item{check}{a \code{\link{logical}} specifying if the validity of
+    \code{perm} should be checked (not strictly, currently).}
 }
-\value{
-  An elliptical copula object of class \code{"\linkS4class{normalCopula}"}
-  or \code{"\linkS4class{tCopula}"}.
+\value{For
+  \describe{
+    \item{\code{ellipCopula()}, \code{normalCopula()}, or \code{tCopula()}:}{
+      an elliptical copula object of class \code{"\linkS4class{normalCopula}"}
+      or \code{"\linkS4class{tCopula}"}.}
+    \item{dispstrToep():}{the \code{\link{character}} string \code{"toep"},
+      optionally with attribute (see \code{\link{attributes}},
+      \code{\link{attr}}) \code{"perm"} with a permutation \eqn{p} of
+      \code{1:d}, such that (the column permuted) \eqn{U_p}{U[p]}, or in
+      the data case the column-permuted matrix \code{U[,p]} has as
+      dispersion matrix \code{toeplitz(c(1, par))}, with \code{par} the
+      respective parameter vector of bivariate \dQuote{correlations}
+      \eqn{\rho_{i,j}}.
+
+      Note that the result of \code{dispstrToep()} is currently stored in the
+      \code{dispstr} slot of the copula object.}
+    \item{pCopula(u, *): }{the numerical vector of copula probabilites of
+      length \code{nrow(u)}.}
+  }
 }
 \note{
   \code{ellipCopula()} is a wrapper for \code{normalCopula()} and
@@ -166,6 +194,46 @@ tCopula(dim=3)
 tCopula(dim=4, df.fixed=TRUE)
 tCopula(dim=5, disp = "toep", df.fixed=TRUE)
 normalCopula(dim=4, disp = "un")
+
+## Toeplitz after *permutation* dispersions (new in copula 1.1-0) ---------
+tpar <- c(7,5,3)/8 # *gives* pos.def.:
+(ev <- eigen(toeplitz(c(1, tpar)), symmetric=TRUE, only.values=TRUE)$values)
+stopifnot(ev > 0)
+N4.   <- ellipCopula("normal", dim=4, param=tpar, dispstr = "toep") #"regular"
+## reversed order is "the same" for toeplitz structure:
+N4.pr <- ellipCopula("normal", dim=4, param=tpar, dispstr = dispstrToep(4:1))
+N4.p1 <- ellipCopula("normal", dim=4, param=tpar, dispstr = dispstrToep(c(4,1:3)))
+N4.p2 <- ellipCopula("normal", dim=4, param=tpar, dispstr = dispstrToep(c(4:3,1:2)))
+N4.p3 <- ellipCopula("normal", dim=4, param=tpar, dispstr = dispstrToep(c(2,4,1,3)))
+
+(pm <- attr(N4.p3@dispstr, "perm")) # (2 4 1 3)
+ip <- c(3,1,4,2) # the *inverse* permutation of (2 4 1 3) = Matrix::invPerm(pm)
+(Sp3 <- getSigma(N4.p3)) # <-- "permuted toeplitz"
+Sp3[ip, ip] # re-ordered rows & columns => *is* toeplitz :
+stopifnot(exprs = {
+  ## permutations  pm  and  ip  are inverses:
+  pm[ip] == 1:4
+  ip[pm] == 1:4
+  is.matrix(T4 <- toeplitz(c(1, tpar)))
+  identical(getSigma(N4.),   T4)
+  identical(getSigma(N4.pr), T4) # 4:1 and 1:4 is "the same" for Rho
+  identical(Sp3[ip, ip]  ,   T4)
+  identical(Sp3,      T4[pm,pm])
+})
+## Data generation -- NB: The U matrices are equal only "in distribution":
+set.seed(7); U.p3 <- rCopula(1000, N4.p3)
+set.seed(7); U.   <- rCopula(1000, N4.)
+stopifnot(exprs = {
+ all.equal(loglikCopula(tpar, u=U.p3,      copula= N4.p3),
+           loglikCopula(tpar, u=U.p3[,ip], copula= N4.) -> LL3)
+ all.equal(loglikCopula(tpar, u=U.,      copula= N4.),
+           loglikCopula(tpar, u=U.[,pm], copula= N4.p3) -> LL.)
+})
+c(LL. , LL3)# similar but different
+fm.  <- fitCopula(N4.  , U.  )
+fm.3 <- fitCopula(N4.p3, U.p3)
+summary(fm.3)
+stopifnot(all.equal(coef(fm.), coef(fm.3), tol = 0.01))# similar but different
 }
 \keyword{distribution}
 \keyword{multivariate}
